compiler/testData/diagnostics/tests/kt55181.kt
// FIR_IDENTICAL

fun main() {
  throw <!TYPE_MISMATCH!>"str"<!>
}
